--- a/docs/templates/_header.html.slim
+++ b/docs/templates/_header.html.slim
@@ -6,6 +6,7 @@
         a.navbar-brand href='https://github.com/AY1920S1-CS2103T-T11-3/main/releases'
           img src=(site_url 'images/AddMin+_Logo.png') alt='SE-EDU'
         ul.navbar-nav
+          li.nav-item
             a.nav-link.active href=(site_url 'index.html') AddMin+
           li.nav-item
             a.nav-link href='https://se-edu.github.io/collate' Collate
