--- a/docs/templates/_header.html.slim
+++ b/docs/templates/_header.html.slim
@@ -20,7 +20,7 @@
     nav.navbar.navbar-light.bg-light
       .container
         - if attr? 'site-name'
-            a.navbar-brand href=(site_url 'index.html') =(attr 'site-name')
+            a.navbar-brand href=(site_url 'index.html') =(attr 'AddMin+')
         ul.navbar-nav
           li.nav-item
             =nav_link('UserGuide', 'UserGuide.html', 'User Guide')
