--- a/src/main/resources/view/ListPanel.fxml
+++ b/src/main/resources/view/ListPanel.fxml
@@ -6,4 +6,5 @@
 <HBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <ListView fx:id="personListView" HBox.hgrow="ALWAYS" />
     <ListView fx:id="eventListView" HBox.hgrow="ALWAYS" />
+   <ListView fx:id="sortedListView" HBox.hgrow="ALWAYS" />
 </HBox>
