--- a/src/main/resources/view/EmployeeListCard.fxml
+++ b/src/main/resources/view/EmployeeListCard.fxml
@@ -38,7 +38,7 @@
       <FlowPane fx:id="tags" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$employeeID" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$employeeGender" />
-      <Label fx:id="address" styleClass="cell_small_label" text="\$employeePay" />
+      <Label fx:id="address" styleClass="cell_small_label" text="\$employeeSalaryPaid" />
     </VBox>
       <rowConstraints>
          <RowConstraints />
